[project]
name = "dbflows"
version = "0.1.11"
description = "Database incremental exports, transfers, imports, ETL, creation / management"
authors = [{ name = "Dan Kelleher", email = "kelleherjdan@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "async_lru",
    "fileflows",
    "sqlalchemy>=2.0.0",
    "quicklogs",
    "dynamic-imports",
    "asyncclick",
    "tqdm",
    "pydantic>=2.0.0",
    "cytoolz",
    "connectorx",
    "pandas>=2.0.0",
    "asyncpg",
    "ujson",
    "duckdb>=1.0.0",
    "xxhash",
]

[project.optional-dependencies]
dev = [
    "psycopg[binary]",
    "black",
    "pytest",
    "pytest-asyncio",
    "faker",
    "python-dotenv",
    "jupyter",
]

[tool.setuptools]
packages = ["dbflows", "dbflows.components"]

[project.scripts]
dbflows = "dbflows.cli:run_cli"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
